--- a/website-configuration.yaml
+++ b/website-configuration.yaml
@@ -95,6 +95,29 @@ areaConfigurations:
     fr: "Russie"
     nl: "Rusland"
     no: "Russland"
+- areaCode: "sg"
+  elections:
+    national:
+      dates:
+        14: "2001-11-03"
+        15: "2006-05-06"
+        16: "2011-05-07"
+        17: "2015-09-11"
+        18: "2020-07-10"
+        19: "≤2025-11-23"
+    presidential:
+      dates:
+        3: "2005-08-17"
+        4: "2011-08-27"
+        5: "2017-09-13"
+        6: "2023-09-01"
+  translations:
+    de: "Singapur"
+    en: "Singapore"
+    eo: "Singapuro"
+    fr: "Singapour"
+    nl: "Singapore"
+    no: "Singapore"
 - areaCode: "tr"
   # Should be synchronized between Asia and Europe
   elections:
