--- a/website-configuration.yaml
+++ b/website-configuration.yaml
@@ -120,6 +120,21 @@ areaConfigurations:
     no: "Singapore"
 - areaCode: "tr"
   # Should be synchronized between Asia and Europe
+  csvConfiguration:
+    electoralListIds:
+    - "TR001"
+    - "TR002"
+    - "TR004"
+    - "TR003"
+    - "TR005"
+    - "TR006"
+    - "TR008"
+    - "TR007"
+    - "TR010"
+    - "TR009"
+    - "TR011"
+    - "TR012"
+    - "TR013"
   elections:
     national:
       dates:
