--- a/website-configuration.yaml
+++ b/website-configuration.yaml
@@ -213,3 +213,30 @@ areaConfigurations:
     fr: "Turquie"
     nl: "Turkije"
     no: "Tyrkia"
+- areaCode: "tw"
+  elections:
+    national:
+      dates:
+        11: "2001-12-01"
+        12: "2004-12-11"
+        13: "2008-01-12"
+        14: "2012-01-14"
+        15: "2016-01-16"
+        16: "2020-01-11"
+        17: "2024-01-13"
+    presidential:
+      dates:
+        2: "2000-03-18"
+        3: "2004-03-20"
+        4: "2008-03-22"
+        5: "2012-01-14"
+        6: "2016-01-16"
+        7: "2020-01-11"
+        8: "2024-01-13"
+  translations:
+    de: "Taiwan"
+    en: "Taiwan"
+    eo: "Tajvano"
+    fr: "Taïwan"
+    nl: "Taiwan"
+    no: "Taiwan"
