--- a/website-configuration.yaml
+++ b/website-configuration.yaml
@@ -221,6 +221,29 @@ areaConfigurations:
     fr: "Singapour"
     nl: "Singapore"
     no: "Singapore"
+- areaCode: "tj"
+  elections:
+    national:
+      dates:
+        14: "2000-02-27"
+        15: "2005-02-27+2005-03-15"
+        16: "2010-02-28+2010-03-14"
+        17: "2015-03-01"
+        18: "2020-03-01"
+        19: "2025-03-02+2025-03-28"
+    presidential:
+      dates:
+        4: "2006-11-06"
+        5: "2013-11-06"
+        6: "2020-10-11"
+        7: "⪅2027-10"
+  translations:
+    de: "Tadschikistan"
+    en: "Tajikistan"
+    eo: "Taĝikio"
+    fr: "Tadjikistan"
+    nl: "Tadzjikistan"
+    no: "Tadsjikistan"
 - areaCode: "tr"
   # Should be synchronized between Asia and Europe
   csvConfiguration:
