--- a/website-configuration.yaml
+++ b/website-configuration.yaml
@@ -109,6 +109,25 @@ areaConfigurations:
     fr: "Géorgie"
     nl: "Georgië"
     no: "Georgia"
+- areaCode: "iq"
+  elections:
+    national:
+      dates:
+        22: "2000-03-27"
+        23: "2005-01-30"
+        24: "2005-12-15"
+        25: "2010-03-07"
+        26: "2014-04-30"
+        27: "2018-05-12"
+        28: "2021-10-10"
+        29: "2025-11-11"
+  translations:
+    de: "Irak"
+    en: "Irako"
+    eo: "Iraq"
+    fr: "Irak"
+    nl: "Irak"
+    no: "Irak"
 - areaCode: "kr"
   elections:
     national:
