Iraq: Corrected the English and Esperanto name

--- a/website-configuration.yaml
+++ b/website-configuration.yaml
@@ -124,8 +124,8 @@ areaConfigurations:
         29: "2025-11-11"
   translations:
     de: "Irak"
-    en: "Irako"
-    eo: "Iraq"
+    en: "Iraq"
+    eo: "Irako"
     fr: "Irak"
     nl: "Irak"
     no: "Irak"
