--- a/website-configuration.yaml
+++ b/website-configuration.yaml
@@ -129,6 +129,34 @@ areaConfigurations:
     fr: "Irak"
     nl: "Irak"
     no: "Irak"
+- areaCode: "kg"
+  elections:
+    national:
+      dates:
+        14: "2000-02-20"
+        15: "2005-02-27+2005-03-13"
+        16: "2007-12-16"
+        17: "2010-10-10"
+        18: "2015-10-04"
+        19: "2020-10-04"
+        20: "2021-11-28"
+        24: "≤2025-11-30"
+    presidential:
+      dates:
+        3: "2000-10-29"
+        4: "2005-07-10"
+        5: "2009-07-23"
+        6: "2011-10-30"
+        7: "2017-10-15"
+        8: "2021-01-10"
+        9: "≈2027-01"
+  translations:
+    de: "Kirgisistan"
+    en: "Kyrgyzstan"
+    eo: "Kirgizio"
+    fr: "Kirghizistan"
+    nl: "Kirgizië"
+    no: "Kirgisistan"
 - areaCode: "kr"
   elections:
     national:
