--- a/website-configuration.yaml
+++ b/website-configuration.yaml
@@ -447,6 +447,26 @@ areaConfigurations:
     fr: "Singapour"
     nl: "Singapore"
     no: "Singapore"
+- areaCode: "th"
+  elections:
+    national:
+      dates:
+        20: "2001-01-06"
+        21: "2005-02-06"
+        22: "2006-04-02"
+        23: "2007-12-23"
+        24: "2011-07-03"
+        25: "2014-02-02"
+        26: "2019-03-24"
+        27: "2023-05-14"
+        28: "2026-02-08"
+  translations:
+    de: "Thailand"
+    en: "Thailand"
+    eo: "Thajlando"
+    fr: "Thaïlande"
+    nl: "Thailand"
+    no: "Thailand"
 - areaCode: "tj"
   elections:
     national:
