--- a/website-configuration.yaml
+++ b/website-configuration.yaml
@@ -344,6 +344,22 @@ areaConfigurations:
     fr: "Maldives"
     nl: "Malediven"
     no: "Maldivene"
+- areaCode: "np"
+  elections:
+    national:
+      dates:
+        8: "2008-04-10"
+        9: "2013-11-19"
+        10: "2017-11-26+2017-12-07"
+        11: "2022-11-20"
+        12: "2026-03-05"
+  translations:
+    de: "Nepal"
+    en: "Nepal"
+    eo: "Nepalo"
+    fr: "Népal"
+    nl: "Nepal"
+    no: "Nepal"
 - areaCode: "ph"
   elections:
     national:
