--- a/website-configuration.yaml
+++ b/website-configuration.yaml
@@ -177,6 +177,27 @@ areaConfigurations:
     fr: "Irak"
     nl: "Irak"
     no: "Irak"
+- areaCode: "jp"
+  elections:
+    national:
+      dates:
+        42: "2000-06-25"
+        43: "2003-11-09"
+        44: "2005-09-11"
+        45: "2009-08-30"
+        46: "2012-12-16"
+        47: "2014-12-14"
+        48: "2017-10-22"
+        49: "2021-10-31"
+        50: "2024-10-27"
+        51: "2026-02-08"
+  translations:
+    de: "Japan"
+    en: "Japan"
+    eo: "Japanio"
+    fr: "Japon"
+    nl: "Japan"
+    no: "Japan"
 - areaCode: "kg"
   csvConfiguration:
     electoralListIds:
