--- a/website-configuration.yaml
+++ b/website-configuration.yaml
@@ -342,6 +342,24 @@ areaConfigurations:
     fr: "Laos"
     nl: "Laos"
     no: "Laos"
+- areaCode: "lb"
+  elections:
+    national:
+      dates:
+#       18: "2000-08-27/2000-08-28/…/2000-09-03"
+        18: "2000-09-03"
+        19: "2005-05-29+2005-06-05+2005-06-12+2005-06-20"
+        20: "2009-06-07"
+        21: "2018-05-06"
+        22: "2022-05-15"
+        23: "2026-05-10"
+  translations:
+    de: "Libanon"
+    en: "Lebanon"
+    eo: "Libano"
+    fr: "Liban"
+    nl: "Libanon"
+    no: "Libanon"
 - areaCode: "mm"
   elections:
     national:
